--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Links Page</title>
+  <title>Game name</title>
 </head>
 <body>
-  <h1>Some Links</h1>
+  <h1>Leauge of legend</h1>
   <ul>
-    <li><a href="https://en.wikipedia.org/wiki/Taco">Tacos</a></li>
-    <li><a href="https://en.wikipedia.org/wiki/Hummus">Hummus</a></li>
+    <li><a href="https://www.leagueoflegends.com/en-us/">League of Legend</a></li>
+    <h2>champions</h2>
+    <li><a href="https://www.leagueoflegends.com/en-us/champions/zeri/">zeri</a></li>
+    <li><a href="https://www.leagueoflegends.com/en-us/champions/aatrox/">aatrox</a></li>
+    <li><a href="https://www.leagueoflegends.com/en-us/champions/ezreal/">ezreal</a></li>
+    <li><a href="https://www.leagueoflegends.com/en-us/champions/ashe/">ashe</a></li>
+    <li><a href="https://www.leagueoflegends.com/en-us/champions/ahri/">ahri</a></li>
   </ul>
 </body>
 </html>
