--- a/p1.html
+++ b/p1.html
@@ -11,84 +11,69 @@
 
     <h2>Project Team Members</h2>
     <ul>
-        <li><strong>Summary Writer</strong>: Requires concise writing and a holistic understanding of the project.</li>
-        <li><strong>Market Researcher</strong>: Requires skills in research and data interpretation.</li>
-        <li><strong>Product Designer</strong>: Requires technical knowledge and creativity.</li>
-        <li><strong>Devil’s Advocate/Critic</strong>: Requires critical thinking and the ability to construct persuasive arguments.</li>
-        <li><strong>Conclusion Writer</strong>: Requires concise writing and the ability to synthesize content.</li>
-        <li><strong>Editor & Appendix Creator</strong>: Responsible for overall editing of the final document and creation of an appendix for any additional supporting materials.</li>
+        <li>Summary Writer: Requires concise writing and a holistic understanding of the project.</li>
+        <li>Market Researcher: Requires skills in research and data interpretation.</li>
+        <li>Product Designer: Requires technical knowledge and creativity.</li>
+        <li>Devil’s Advocate/Critic: Requires critical thinking and the ability to construct persuasive arguments.</li>
+        <li>Conclusion Writer: Requires concise writing and the ability to synthesize content.</li>
+        <li>Editor & Appendix Creator: Responsible for overall editing of the final document and creation of an appendix for any additional supporting materials.</li>
     </ul>
-
-    <blockquote>
-        <p><strong>Note:</strong> For groups of 5, the appendix is not required, and the Summary Writer and Conclusion Writer will share responsibility for overall editing of the final document.</p>
-    </blockquote>
-
-    <hr>
 
     <h2>1. Executive Summary (Overview)</h2>
-    <p><strong>Iron Fist: The Virtual Fist</strong> is a new type of VR glove designed to give gamers and tech enthusiasts a more realistic and immersive experience. These gloves use advanced technology to allow users to feel real sensations, such as vibrations and resistance, when interacting with objects in virtual worlds. Unlike other VR gloves that are heavy and very expensive, Iron Fist is light, slim, and much more affordable, making it accessible to more people. The controls can also be customized to fit every user's hand, ensuring comfort during long gaming or work situations.</p>
+    <p>Iron Fist: The Virtual Fist is a new type of VR glove designed to give gamers and tech enthusiasts a more realistic and immersive experience. These gloves use advanced technology to allow users to feel real sensations, such as vibrations and resistance, when interacting with objects in virtual worlds. Unlike other VR gloves that are heavy and very expensive, Iron Fist is light, slim, and much more affordable, making it accessible to more people. The controls can also be customized to fit every user's hand, ensuring comfort during long gaming or work situations.</p>
 
     <ul>
-        <li><strong>Haptic Feedback:</strong> The gloves provide physical sensations, such as vibrations and force resistance, giving players the sensation of interacting with real objects and machinery.</li>
-        <li><strong>Precise Motion Tracking:</strong> The gloves capture detailed hand and finger movements, allowing for accurate interaction with the virtual environment, from turning knobs to handling complex industrial tools.</li>
-        <li><strong>Lightweight, Slim Design:</strong> Ergonomically designed for comfort, the gloves are lightweight and slim, ensuring they are easy to wear for extended periods.</li>
-        <li><strong>Customizable Controls:</strong> Users can tailor control settings to their personal preferences, ensuring a flexible and personalized gameplay experience.</li>
+        <li>Haptic Feedback: The gloves provide physical sensations, such as vibrations and force resistance, giving players the sensation of interacting with real objects and machinery.</li>
+        <li>Precise Motion Tracking: The gloves capture detailed hand and finger movements, allowing for accurate interaction with the virtual environment, from turning knobs to handling complex industrial tools.</li>
+        <li>Lightweight, Slim Design: Ergonomically designed for comfort, the gloves are lightweight and slim, ensuring they are easy to wear for extended periods.</li>
+        <li>Customizable Controls: Users can tailor control settings to their personal preferences, ensuring a flexible and personalized gameplay experience.</li>
     </ul>
 
-    <hr>
-
     <h2>2. Market Research and Need Analysis</h2>
-    <p>From my research, I've found that there are VR gloves with haptic feedback that exist, but so far, they are primarily made for businesses that use full-body motion and tracking for video games and animated movies. The average price for a pair of VR gloves is <strong>$6,000</strong>, which is extremely expensive for the common consumer. Some versions of VR gloves, like <strong>Haptx VR gloves</strong>, use backpacks and heavy setups, making them cumbersome to use for most people. Haptx reports that the gloves weigh <strong>1.25 lbs</strong> while the backpack with the charger weighs <strong>22.2 lbs</strong>, so the total weight of this setup is around <strong>24 lbs</strong>.</p>
+    <p>From my research, I've found that there are VR gloves with haptic feedback that exist, but so far, they are primarily made for businesses that use full-body motion and tracking for video games and animated movies. The average price for a pair of VR gloves is $6,000, which is extremely expensive for the common consumer. Some versions of VR gloves, like Haptx VR gloves, use backpacks and heavy setups, making them cumbersome to use for most people. Haptx reports that the gloves weigh 1.25 lbs while the backpack with the charger weighs 22.2 lbs, so the total weight of this setup is around 24 lbs.</p>
 
-    <p>The gloves are super expensive, so right now, only the wealthy can afford them. Most companies that sell these gloves ask you to contact them with your current project before they'll even disclose the prices. Our <strong>VR gloves</strong> will be more <strong>affordable</strong>, <strong>comfortable</strong>, and <strong>stylish</strong>.</p>
+    <p>The gloves are super expensive, so right now, only the wealthy can afford them. Most companies that sell these gloves ask you to contact them with your current project before they'll even disclose the prices. Our VR gloves will be more affordable, comfortable, and stylish.</p>
 
     <h3>Graph A</h3>
     <p>This chart shows how companies and consumers increased expenses on AR and VR from 2018 to 2022. From this chart, we can see that the VR and AR industry will continue to increase in the following years.</p>
 
     <h3>Graph B</h3>
-    <p>This graph shows how spending on research and development of VR, VR gloves, and VR projects/display walls will increase in the coming years. I primarily included this graph to show how much <strong>gesture-tracking devices</strong> (like VR gloves) will become more popular because of the demand for this type of technology. Movies like <em>Ready Player One</em>, <em>Spy Kids</em>, and <em>Tron</em> are influencing consumers to invest in VR, increasing interest in alternate ways of interacting with VR.</p>
-
-    <hr>
+    <p>This graph shows how spending on research and development of VR, VR gloves, and VR projects/display walls will increase in the coming years. I primarily included this graph to show how much gesture-tracking devices (like VR gloves) will become more popular because of the demand for this type of technology. Movies like <em>Ready Player One</em>, <em>Spy Kids</em>, and <em>Tron</em> are influencing consumers to invest in VR, increasing interest in alternate ways of interacting with VR.</p>
 
     <h2>3. Product Description</h2>
-    <p>The <strong>Iron Fist</strong> is a lightweight pair of VR gloves designed to provide realistic sensations during interactive experiences. Despite its name, Iron Fist is designed to be lightweight, easy to use, and slim. Features range from advanced haptic feedback to hand tracking and customizable controls. It can be connected wirelessly via Bluetooth or through a USB cable.</p>
+    <p>The Iron Fist is a lightweight pair of VR gloves designed to provide realistic sensations during interactive experiences. Despite its name, Iron Fist is designed to be lightweight, easy to use, and slim. Features range from advanced haptic feedback to hand tracking and customizable controls. It can be connected wirelessly via Bluetooth or through a USB cable.</p>
 
     <ul>
-        <li><strong>Haptic Feedback System:</strong> Vibrations are distributed across the hand, allowing programmers to create sensations on specific areas to fully showcase their creations.</li>
-        <li><strong>Hand Tracking:</strong> Developers and creators can incorporate specific hand motions through sensory points across the glove. Values from these sensors can be accessed via Iron Fist’s software, which supports integration with popular game engines such as Unity and Unreal.</li>
-        <li><strong>Customizable Controls:</strong> The glove includes symmetrical button pads with two buttons and a bumper near the pointer finger joint. These can be remapped for custom finger movements to act as triggers.</li>
-        <li><strong>Battery:</strong> Powered by a rechargeable battery compartment located on the back of the glove, it offers <strong>2-4 hours</strong> of playtime. The battery is small enough to disperse heat efficiently.</li>
+        <li>Haptic Feedback System: Vibrations are distributed across the hand, allowing programmers to create sensations on specific areas to fully showcase their creations.</li>
+        <li>Hand Tracking: Developers and creators can incorporate specific hand motions through sensory points across the glove. Values from these sensors can be accessed via Iron Fist’s software, which supports integration with popular game engines such as Unity and Unreal.</li>
+        <li>Customizable Controls: The glove includes symmetrical button pads with two buttons and a bumper near the pointer finger joint. These can be remapped for custom finger movements to act as triggers.</li>
+        <li>Battery: Powered by a rechargeable battery compartment located on the back of the glove, it offers 2-4 hours of playtime. The battery is small enough to disperse heat efficiently.</li>
     </ul>
-
-    <hr>
 
     <h2>4. Possible Problems and Counterarguments</h2>
     <ul>
-        <li><strong>Competition with existing competitors:</strong> Current VR gloves are not widely available and are very expensive. Iron Fist will be mass-produced and offered at a lower price point, making it more accessible.</li>
-        <li><strong>Compatibility:</strong> The Iron Fist software will allow developers to integrate it into games and software, providing access to sensor data. While this is still in development, it will enable developers to control sensor readings like local position.</li>
-        <li><strong>Battery power and overheating:</strong> The gloves will have a battery life of <strong>2-4 hours</strong> to prevent overheating. This design choice reflects the average length of VR sessions, which typically last less than 4 hours.</li>
-        <li><strong>Integration with existing games:</strong> The sensor-based hand tracking system may not be compatible with older games, but the button pads will still work as regular controls.</li>
+        <li>Competition with existing competitors: Current VR gloves are not widely available and are very expensive. Iron Fist will be mass-produced and offered at a lower price point, making it more accessible.</li>
+        <li>Compatibility: The Iron Fist software will allow developers to integrate it into games and software, providing access to sensor data. While this is still in development, it will enable developers to control sensor readings like local position.</li>
+        <li>Battery power and overheating: The gloves will have a battery life of 2-4 hours to prevent overheating. This design choice reflects the average length of VR sessions, which typically last less than 4 hours.</li>
+        <li>Integration with existing games: The sensor-based hand tracking system may not be compatible with older games, but the button pads will still work as regular controls.</li>
     </ul>
 
-    <hr>
-
     <h2>5. Conclusion and Recommendations</h2>
-    <p>VR gloves today are expensive, bulky, and mainly aimed at enterprises, with prices starting around <strong>$5,000</strong>. These gloves are difficult to obtain, and the required setup is complex, often involving heavy equipment like backpacks. Additionally, they are custom-built, adding to the high price tag.</p>
+    <p>VR gloves today are expensive, bulky, and mainly aimed at enterprises, with prices starting around $5,000. These gloves are difficult to obtain, and the required setup is complex, often involving heavy equipment like backpacks. Additionally, they are custom-built, adding to the high price tag.</p>
 
-    <p>Iron Fist is poised to disrupt the market. Our gloves will be <strong>mass-produced</strong>, <strong>lighter</strong>, and <strong>smaller</strong>, allowing us to price them around <strong>$500</strong>. This lower price point will make VR gloves accessible to a broader audience, opening the market to VR enthusiasts and gamers alike. The lightweight design and lack of heavy equipment will enhance ease of use for gamers, making the VR experience more immersive.</p>
+    <p>Iron Fist is poised to disrupt the market. Our gloves will be mass-produced, lighter, and smaller, allowing us to price them around $500. This lower price point will make VR gloves accessible to a broader audience, opening the market to VR enthusiasts and gamers alike. The lightweight design and lack of heavy equipment will enhance ease of use for gamers, making the VR experience more immersive.</p>
 
     <p>We believe Iron Fist has the potential to revolutionize VR gaming by providing affordable, high-quality haptic feedback gloves. We recommend moving forward with the project, as it offers significant growth potential for the VR industry and profitability for our company.</p>
 
-    <hr>
-
     <h2>Bibliography</h2>
     <ol>
-        <li>Haptx.com. Retrieved September 28, 2024, from <a href="https://docs.haptx.com/docs/files/HaptX_Glove_G1_Spec_Sheet_Rev_1.4_Spec.pdf">https://docs.haptx.com/docs/files/HaptX_Glove_G1_Spec_Sheet_Rev_1.4_Spec.pdf</a></li>
-        <li>Posedaru, F.-V. P. T.-M. G. (2020, June). The Impact of Mobile e-Commerce on GDP. <a href="https://www.researchgate.net/publication/342868068_The_Impact_of_Mobile_e-Commerce_on_GDP_A_Comparative_Analysis_between_Romania_and_Germany_and_how_Covid-19_Influences_the_e-Commerce_Activity_Worldwide">Link</a></li>
-        <li>Virtual Reality (VR) Market Size And Share Report, 2030. <a href="https://www.grandviewresearch.com/industry-analysis/virtual-reality-vr-market">Link</a></li>
-        <li>HTC VIVE and “Ready Player One” Debut VR - ProQuest. <a href="https://www.proquest.com/docview/2011592168">Link</a></li>
+        <li><a href="https://docs.haptx.com/docs/files/HaptX_Glove_G1_Spec_Sheet_Rev_1.4_Spec.pdf">Haptx.com. Retrieved September 28, 2024</a></li>
+        <li><a href="https://www.researchgate.net/publication/342868068_The_Impact_of_Mobile_e-Commerce_on_GDP_A_Comparative_Analysis_between_Romania_and_Germany_and_how_Covid-19_Influences_the_e-Commerce_Activity_Worldwide">Posedaru, F.-V. P. T.-M. G. (2020, June). The Impact of Mobile e-Commerce on GDP</a></li>
+        <li><a href="https://www.grandviewresearch.com/industry-analysis/virtual-reality-vr-market">Virtual Reality (VR) Market Size And Share Report, 2030</a></li>
+        <li><a href="https://www.proquest.com/docview/2011592168">HTC VIVE and “Ready Player One” Debut VR - ProQuest</a></li>
     </ol>
 
 </body>
 </html>
+
 
